Tue Jun 03 08:27:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/putdata.c src/odbc/unittests/t0004.c:
	* src/odbc/unittests/tables.c src/tds/unittests/t0003.c:
	- remove some warnings

Mon Jun 02 13:33:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
	- update list of odbc implemented functions

Sat May 31 21:23:43 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt src/odbc/odbc.c:
	- implement SQLBindParam

Sat May 31 21:01:13 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt src/odbc/odbc.c:
	* src/odbc/unittests/putdata.c:
	- implement SQLSetParam and SQLSpecialColumns

Sat May 31 18:12:42 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/convert_sql2string.h:
	* src/odbc/prepare_query.c src/odbc/unittests/putdata.c(added):
	* src/odbc/unittests/Makefile.am:
	- added test for SQLPutData and fixed some problems
	  (test do not still work with --enable-developing)

Fri May 30 12:07:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/rpc_ct_param.c:
	- do not use NULL parameters
	- change comment style

Fri May 30 10:43:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/token.c:
	- reset rows_affected on results
	- fix ODBC moreandcount test

Thu May 29 21:15:00 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: fix typo in dump

Thu May 29 21:07:28 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c:
	- fix core if execute prepared statement with no parameters

Thu May 29 14:10:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/query.c src/tds/token.c:
	- some fix for prepare and RPC

Wed May 28 21:59:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/odbc.c src/pool/member.c:
	* src/tds/token.c src/tds/unittests/t0003.c: