@@ -2,27 +2,27 @@
 
 /* Test for SQLMoreResults */
 
-static char software_version[] = "$Id: t0003.c,v 1.13 2003-04-01 12:01:39 freddy77 Exp $";
+static char software_version[] = "$Id: t0003.c,v 1.14 2003-06-03 09:48:09 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
-int
-main(int argc, char *argv[])
+static void
+DoTest(int prepared)
 {
-	char command[512];
-
-	Connect();
-
-	sprintf(command, "drop table #odbctestdata");
-	printf("%s\n", command);
-	if (SQLExecDirect(Statement, (SQLCHAR *) command, SQL_NTS)
-	    != SQL_SUCCESS) {
-		printf("Unable to execute statement\n");
-	}
-
 	Command(Statement, "create table #odbctestdata (i int)");
 
 	/* test that 2 empty result set are returned correctly */
-	Command(Statement, "select * from #odbctestdata select * from #odbctestdata");
+	if (!prepared) {
+		Command(Statement, "select * from #odbctestdata select * from #odbctestdata");
+	} else {
+		if (SQLPrepare(Statement, "select * from #odbctestdata select * from #odbctestdata", SQL_NTS) != SQL_SUCCESS) {
+			printf("SQLPrepare return failure\n");
+			exit(1);
+		}
+		if (SQLExecute(Statement) != SQL_SUCCESS) {
+			printf("SQLExecure return failure\n");
+			exit(1);
+		}
+	}
 
 	if (SQLFetch(Statement) != SQL_NO_DATA) {
 		printf("Data not expected\n");
@@ -47,7 +47,18 @@ main(int argc, char *argv[])
 
 	/* test that skipping a no empty result go to other result set */
 	Command(Statement, "insert into #odbctestdata values(123)");
-	Command(Statement, "select * from #odbctestdata select * from #odbctestdata");
+	if (!prepared) {
+		Command(Statement, "select * from #odbctestdata select * from #odbctestdata");
+	} else {
+		if (SQLPrepare(Statement, "select * from #odbctestdata select * from #odbctestdata", SQL_NTS) != SQL_SUCCESS) {
+			printf("SQLPrepare return failure\n");
+			exit(1);
+		}
+		if (SQLExecute(Statement) != SQL_SUCCESS) {
+			printf("SQLExecure return failure\n");
+			exit(1);
+		}
+	}
 
 	if (SQLMoreResults(Statement) != SQL_SUCCESS) {
 		printf("Expected another recordset\n");
@@ -71,6 +82,15 @@ main(int argc, char *argv[])
 	}
 
 	Command(Statement, "drop table #odbctestdata");
+}
+
+int
+main(int argc, char *argv[])
+{
+	Connect();
+
+	DoTest(0);
+	DoTest(1);
 
 	Disconnect();
 
