@@ -1,3 +1,6 @@
+Tue Jun 03 11:47:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/unittests/t0003.c: test prepared too
+
 Tue Jun 03 08:27:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/unittests/putdata.c src/odbc/unittests/t0004.c:
 	* src/odbc/unittests/tables.c src/tds/unittests/t0003.c:
